# nlibc

./: .gitignore  Makefile  Makefile.in  Makefile.orig  README.md  TODO  assert.c  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.in  errors  file.c  file2.c  math.c  memory.c  string.c
arch/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  configure.in
arch/autom4te.cache/: output.0  requests  traces.0  traces.1
arch/x86/: file.s  loader.s  memory.s  proc.s
arch/x86_64/: file.s  handle_auxv.c  loader.s  memory.s  proc.s
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/: assert.h  config.mk  errno.h  file.h  io.h  lfile.h  lmemory.h  math.h  memory.h  proc.h  signal.h  stddef.h  string.h  tmp.sh  types.h
include/bits/: signum.h  sigset.h
tests/assert/: Makefile  Makefile.in  assert_fail-wrapper  assert_fail.c  assert_succeed-wrapper  assert_succeed.c  config.status  configure  configure.ac  test-assert-assert_fail-wrapper
tests/file/: Makefile  Makefile.in  chdir-wrapper  chdir.c  chmod-wrapper  chmod.c  close-wrapper  close.c  config.h  config.h.in  config.status  configure  configure.ac  creat-wrapper  creat.c  getcwd-wrapper  getcwd.c  getgid-wrapper  getgid.c  low_error-wrapper  low_error.c  low_print-wrapper  low_print.c  o_append-wrapper  o_append.c  open-wrapper  open.c  read-eagain-wrapper  read-eagain.c  read-wrapper  read.c  test-file-low_print-wrapper  test-file-write-wrapper  umask-read-wrapper  umask-read.c  (+2 more)
(+81 files in other folders)
